Version 0.7b1 2006-12-06
	
* Code:
  - expanded semantic interpretation package
  - new high-level chunking interface, with cascaded chunking
  - split chunking code into new chunk package
  - prototyped basic wordnet similarity measures
    (path distance, Wu + Palmer and Leacock + Chodorow similarity measures.)
  - bugfixes (tag.Window, tag.ngram)
  - more doctests
* Contrib:	
  - toolbox language settings module
* Tutorials:
  - rewrite of chunking chapter, switched from Treebank to CoNLL format as main focus,
    simplified evaluation framework, added ngram chunking section
  - substantial updates throughout (esp programming and semantics chapters)
* Corpora:
  - Chat-80 Prolog data files provided as corpora, plus corpus reader
	
Version 0.7a2 2006-11-13

* Code:
  - more doctest
  - code to read Chat-80 data
  - HMM bugfix
* Tutorials:
  - continued updates and polishing
* Corpora:
  - toolbox MDF sample data

Version 0.7a1 2006-10-29

* Code:
  - new toolbox module (Greg Aumann)
  - new semantics package (Ewan Klein)
  - bugfixes
* Tutorials
  - substantial revision, especially in preface, introduction, words,
    and semantics chapters.
	
Version 0.6.6 2006-10-06

* Code:
  - bugfixes (probability, shoebox, draw)
* Contrib:
  - new work on shoebox package (Stuart Robinson)
* Tutorials:
  - continual expansion and revision, especially on introduction to
    programming, advanced programming and the feature-based grammar chapters.
	
Version 0.6.5 2006-07-09

* Code:
  - improvements to shoebox module (Stuart Robinson, Greg Aumann)
  - incorporated feature-based parsing into core NLTK-Lite
  - corpus reader for Sinica treebank sample
  - new stemmer package
* Contrib:
  - hole semantics implementation (Peter Wang)
  - Incorporating yaml
  - new work on feature structures, unification, lambda calculus
  - new work on shoebox package (Stuart Robinson, Greg Aumann)
* Corpora:
  - Sinica treebank sample	
* Tutorials: