@@ -115,6 +115,7 @@
      taggers (regexp, n-gram, backoff, Brill, HMM),
      parsers (recursive descent, shift-reduce, chart, feature-based, probabilistic, ...),
      semantic interpretation,
+     wordnet interface and similarity measures,
      clusterers (EM, k-means, ...), probability distributions,
      chatbots, demonstrations (48,000 lines of code)
    </p>
@@ -138,9 +139,10 @@
 
     <p> <b>NLTK-Lite 0.7b1 released [December 2006]</b><br/>
       This release contains:
-        a new semantic interpretation package (Ewan Klein),
+        new semantic interpretation package (Ewan Klein),
         new support for SIL Toolbox format (Greg Aumann),
-        a new chunking package, including cascaded chunking, and
+        new chunking package including cascaded chunking,
+        wordnet package updated for version 2.1 of Wordnet, and
         prototype wordnet similarity measures (David Ormiston Smith),
         bringing the codebase to 48,000 lines;
         substantial new chapters on semantic interpretation and chunking, and
@@ -225,7 +227,7 @@
 <table class="transparent" width="100%">
 <tr><td align="left"><font size="-1">
 <!-- hhmts start -->
-Last modified: Mon Dec  4 10:22:53 EST 2006
+Last modified: Wed Dec  6 15:05:19 EST 2006
 <!-- hhmts end -->
 </font></td><td align="right"><font size="-1">
 <address><a href="mailto:sb@csse.unimelb.edu.au,edloper@gradient.cis.upenn.edu">Steven Bird, Edward D. Loper</a></address>
